--- a/style.css
+++ b/style.css
@@ -80,9 +80,10 @@ a:before {
     justify-content: space-evenly;
     align-items: flex-end;
     height: 500px;
-    background-image: url("");
-    background-repeat: no-repeat;
-    border: 1px solid;
+    
+  
+    
+    
     
     
   }
@@ -97,13 +98,29 @@ a:before {
     flex-direction: column;
     
     
+    
   }
-
+p{
+    color: white;
+}
   button{
-    width: 150px;
+    width: 180px;
     height: 50px;
     border-radius: 10px;
+    font-size: 20px;
+    background-color: black;
+
     
+    
+  }
+  button:hover{
+    cursor: pointer;
+    background-color:white;
+
+  }
+
+  p:hover{
+    color: black;
   }
   
   .text-1 h1,h2{
@@ -116,6 +133,7 @@ a:before {
     justify-content: center;
     flex-direction: column;
     margin-bottom: 100px;
+    
 
     align-items: center;
 
@@ -139,26 +157,42 @@ a:before {
     }
 
     .card-1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
         height: 250px;
         width:350px;
-        border: 1px solid;
+        
         
     }
 
     .card-2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
         height: 250px;
         width:350px;
-        border: 1px solid;
+        
     }
 
     .card-3{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
         height: 250px;
         width:350px;
-        border: 1px solid;
+        
     }
 
     .card-4{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
         height: 250px;
         width:350px;
-        border: 1px solid;
+        
     }
